# arbiter

./: .gitignore
arbiter/: .env.example  .gitignore  INTERFACES.md  Makefile  ROADMAP.md  SETUP_NEEDED.md  pyproject.toml
arbiter/arbiter/: __init__.py  cli.py  config.py  logging_setup.py  metrics.py  types.py
arbiter/arbiter/adapters/: __init__.py
arbiter/arbiter/calibration/: __init__.py  calibrator.py  isotonic.py  multi_advisor.py  platt.py  stance_base.py
arbiter/arbiter/contract/: __init__.py  opinion.py  seams.py
arbiter/arbiter/data/: __init__.py  activist_filers.py  adv.py  beta.py  clock.py  current_price.py  fund_managers.py  pit.py  replay_clock.py  robotics_universe.py  sectors.py  slippage.py
arbiter/cockpit/: README.md
arbiter/config/: arbiter.toml
arbiter/deploy/: README.md  SCHEDULE_PLAN.md  TOMORROW-SESSION-RUNBOOK.md  com.arbiter.daemon.plist  com.arbiter.daily.plist  com.arbiter.monday.plist  crontab.example
arbiter/scripts/: check_insert_only.sh  check_no_lookahead.sh  schedule.sh
arbiter/tests/: __init__.py  conftest.py  test_alerting_notify.py  test_cli_monday_refresh.py  test_config.py  test_config_refresh_fields.py  test_config_robotics_advisor.py  test_connection.py  test_monday_plist.py  test_scaffold.py  test_sim_executor.py  test_types.py
cockpit/: README.md
mirofish/: README.md  __init__.py  __main__.py  app.py  cache.py  config.py  conftest.py  judge.py  llm.py  pyproject.toml  requirements.txt  run.sh  types.py
mirofish/clients/: alpaca.py  sec_facts.py
mirofish/data/: sector_valuation.py
mirofish/deploy/: com.mirofish.service.plist
mirofish/evidence/: fundamentals.py  pack.py  technical.py
mirofish/tests/: test_alpaca.py  test_app.py  test_cache.py  test_config.py  test_contract_fake_llm.py  test_fundamentals.py  test_isolation.py  test_judge.py  test_llm_fake.py  test_pack.py  test_sec_facts.py  test_technical.py
(+577 files in other folders)
