[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter"
version = "0.1.0"
description = "Smart-money decision engine"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.0",
    "typer>=0.12",
    "requests>=2.31",
    "httpx>=0.27",
    "python-ulid>=2.0",
    "tomli>=2.0; python_version < '3.11'",
    "pdfplumber>=0.10",
]

[project.optional-dependencies]
data = ["pandas>=2.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
cockpit = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6"]

[project.scripts]
arbiter = "arbiter.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["arbiter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
